# sem4-coursework

./: .gitignore  CMakeLists.txt  Cpu.cpp  Cpu.h  Disk.cpp  Disk.h  Memory.cpp  Memory.h  Net.cpp  Net.h  Overseer_ru_BY.ts  README.md  color.h  customplot.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  percentticker.h  squarelegenditem.h  threads.h
